# TrackNetV4

./: README.md  compare_v3c_models.py  config.yaml  predict.py  preprocess.py  pyproject.toml  run_gru.sh  test_v2.py  torch2onnx_v3.py  torch2onnx_v3b.py  torch2onnx_v3c.py  train.py  train_all_v3c.sh  train_gru.py  train_v2.py  train_v3.py  train_v3c.py  train_v3c_quick_test.py  vball_net_v3c_enhanced.onnx  vball_net_v3c_optimized.onnx  vballnet_v3c_improved.onnx  vballnet_v3c_minimal.onnx  video_predict.py
.opencode/: opencode.jsonc
model/: tracknet_exp.py  vballnet_v1c.py  vballnet_v3.py  vballnet_v3b.py  vballnet_v3c.py  vballnet_v3c_enhanced.py  vballnet_v3c_improved.py  vballnet_v3c_minimal.py  vballnet_v3c_optimized.py
predict/: streem_video_predict.py
preprocessing/: tracknet_dataset.py  tracknet_datasetv3.py
src/tracknetv4/cli/: test.py  train.py
src/tracknetv4/model/: tracknet_v4.py  tracknet_v4_direction.py
src/tracknetv4/predict/: single_frame_predict.py  video_predict.py
