[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracknetv4-pytorch"
version = "0.1.0"
description = "TrackNet V4 - Deep learning badminton shuttlecock tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "torch>2.0,<=2.6",
    "torchaudio>2.0,<=2.6",
    "torchvision>0.15,<=0.21",
    "tqdm>=4.67.1",
]

[project.scripts]
tracknet-train = "tracknetv4.cli.train:main"
tracknet-test = "tracknetv4.cli.test:main"
tracknet-video-predict = "tracknetv4.predict.video_predict:main"
tracknet-single-predict = "tracknetv4.predict.single_frame_predict:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
